<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/tracking_preferences">
		<ListPreference
			android:key="tracking_freq" 
			android:title="@string/pref_tracking_freq"
			android:summary="@string/pref_tracking_freq_summary"
			android:dialogTitle="@string/pref_tracking_freq"
			android:entries="@array/pref_tracking_freq_entries"
			android:entryValues="@array/pref_tracking_freq_entryvalues" 
			android:defaultValue="30" />
	    </PreferenceCategory> 
	
	<PreferenceCategory android:title="@string/location_preferences">	 	
		<ListPreference 
			android:key="server_freq" 
			android:title="@string/pref_server_freq"
			android:summary="@string/pref_server_freq_summary"
			android:dialogTitle="@string/pref_server_freq"
			android:entries="@array/pref_server_freq_entries"
			android:entryValues="@array/pref_server_freq_entryvalues" 
			android:defaultValue="1800" />		
		<ListPreference 
			android:key="send_stop" 
			android:title="@string/pref_send_stop"
			android:summary="@string/pref_send_stop_summary"
			android:dialogTitle="@string/pref_send_stop"
			android:entries="@array/pref_send_stop_entries"
			android:entryValues="@array/pref_send_stop_entryvalues" 
			android:defaultValue="1" />	
		 <ListPreference 
			android:key="receive_radius" 
			android:title="@string/receive_radius"
			android:summary="@string/receive_radius_summary"
			android:dialogTitle="@string/receive_radius"
			android:entries="@array/receive_radius_entries"
			android:entryValues="@array/receive_radius_entryvalues" 
			android:defaultValue="10000" />
	     <ListPreference 
			android:key="receive_time" 
			android:title="@string/receive_time"
			android:summary="@string/receive_time_summary"
			android:dialogTitle="@string/receive_time"
			android:entries="@array/receive_time_entries"
			android:entryValues="@array/receive_time_entryvalues" 
			android:defaultValue="168" />
		<ListPreference 
			android:key="receive_freq" 
			android:title="@string/pref_receive_freq"
			android:summary="@string/pref_receive_freq_summary"
			android:dialogTitle="@string/pref_receive_freq"
			android:entries="@array/pref_receive_freq_entries"
			android:entryValues="@array/pref_receive_freq_entryvalues" 
			android:defaultValue="30" />				
		 <ListPreference 
			android:key="receive_stop" 
			android:title="@string/pref_receive_stop"
			android:summary="@string/pref_receive_stop_summary"
			android:dialogTitle="@string/pref_receive_stop"
			android:entries="@array/pref_receive_stop_entries"
			android:entryValues="@array/pref_receive_stop_entryvalues" 
			android:defaultValue="1" />	
	</PreferenceCategory>
		
	<PreferenceCategory android:title="@string/server_preferences">
		<EditTextPreference 
			android:key="server_url"
			android:title="@string/pref_server_url" 
			android:summary="@string/pref_server_url_summary"
			android:inputType="textUri" 
			android:maxLength="100"/>
		<EditTextPreference 
			android:key="login_id"
			android:title="@string/pref_login_id" 
			android:summary="@string/pref_login_id_summary"
			android:inputType="text" />
	</PreferenceCategory>
	
</PreferenceScreen>


